--- a/assets/package.json
+++ b/assets/package.json
@@ -10,7 +10,9 @@
     "@babylonjs/core": "^4.1.0",
     "@babylonjs/loaders": "^4.1.0",
     "@types/agora-rtc-sdk": "^3.1.0",
+    "@types/jquery": "^3.5.1",
     "agora-rtc-sdk": "^3.1.2",
+    "jquery": "^3.5.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
